revise based on feedback
Signed-off-by: Jody Garnett <jody.garnett@gmail.com>